# pw-mcp-py

./: .gitignore  README.md  publish_twine.ps1  pyproject.toml  requirements.txt
scripts/: run_pw_mcp.py
src/pw_mcp/: server.py
